# Systema-App

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
